# AI_Agent

./: .env.example  .pre-commit-config.yaml  README.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini
docs/: api.md  arquitetura.md  index.md
docs/guia/: exemplos.md  instalacao.md  uso-basico.md
docs/logs/: logging_guia_iniciantes.md  logging_visual_guide.md
examples/: exemplo_logs_simples.py
src/: __init__.py  main.py
src/application/: __init__.py  chat_with_agent.py  get_config_new_agents.py
src/application/dtos/: agent_dtos.py
src/application/interfaces/: chat_repository.py
src/application/use_cases/: __init__.py  chat_with_agent.py  create_agent.py  get_config_agents.py  get_config_new_agents.py
src/domain/Agents/: agents.py
src/domain/agents/: agent_domain.py
src/domain/entities/: agent_domain.py
src/domain/exceptions/: __init__.py  domain_exceptions.py
src/domain/interfaces/: chat_repository.py
src/domain/value_objects/: __init__.py  configs_validator.py  history.py  message.py  providers.py
src/infra/: __init__.py
src/infra/Config/: environment.py
src/infra/adapters/: __init__.py
src/infra/config/: __init__.py  environment.py  logging_config.py  metrics.py  retry.py  (+1 more)
src/interface/: agent_controller.py
src/presentation/: __init__.py  agent_controller.py
tests/: __init__.py  conftest.py
tests/domain/: __init__.py
tests/integration/: test_agent_integration.py  test_client_ollama_integration.py  test_client_openai_integration.py  test_factory_integration.py
tests/presentation/: test_agent_controller.py
(+29 files in other folders)
