[project]
name = "ai-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Jordan Estralioto",email = "estraliotojordan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai (>=2.2.0,<3.0.0)",
]

[tool.poetry]
packages = [{include = "ai_agent", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=6.1.0,<7.0.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)"
]
